syntax = "proto3";
option java_package = "grpc";

message TradeSessionRequest{
  string request = 1;
  string email = 2;
}
message TradeSessionResponse{
  string response = 1;
  int32 status = 2;
}
message TradeOperationRequest{
  string request = 1;
  string email = 2;
}
message TradeOperationResponse{
  string response = 1;
  int32 status = 2;
}
message TradeOperationListRequest{
  string request = 1;
  string email = 2;
}
message TradeOperationListResponse{
  string response = 1;
  int32 status = 2;
}
service TradeService{
  rpc operateTradeSession(TradeSessionRequest) returns(TradeSessionResponse);
  rpc operateTrade(TradeOperationRequest) returns(TradeOperationResponse);
  rpc tradeOperationList(TradeOperationListRequest) returns(TradeOperationListResponse);
}